--- a/src/jrbackup/main_window.fxml
+++ b/src/jrbackup/main_window.fxml
@@ -72,7 +72,7 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox prefHeight="536.0" prefWidth="507.0" spacing="5.0" style="-fx-background-color: #ffe7e8;">
+            <VBox prefHeight="662.0" prefWidth="518.0" spacing="5.0" style="-fx-background-color: #ffe7e8;">
                <children>
                   <GridPane hgap="5.0" vgap="5.0">
                     <columnConstraints>
@@ -94,7 +94,7 @@
                      </children>
                   </GridPane>
                   <Separator prefWidth="200.0" />
-                  <TabPane prefHeight="248.0" prefWidth="409.0" stylesheets="@css/tabpane.css" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+                  <TabPane prefHeight="565.0" prefWidth="458.0" stylesheets="@css/tabpane.css" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
                     <tabs>
                       <Tab text="Základní volby">
                         <content>
@@ -108,10 +108,11 @@
                                       <rowConstraints>
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
                                           <CheckBox fx:id="chbSSH" mnemonicParsing="false" onAction="#onNastavitSsh" text="SSH (bude vyžadováno heslo)" />
-                                          <CheckBox fx:id="chbStats" mnemonicParsing="false" text="Zobrazí užitečné informace" GridPane.rowIndex="1" />
+                                          <CheckBox fx:id="chbStats" mnemonicParsing="false" text="Zobrazí užitečné informace" GridPane.rowIndex="2" />
                                           <HBox GridPane.columnIndex="1">
                                              <children>
                                                 <Label text="SSH port:">
@@ -127,6 +128,7 @@
                                                 </TextField>
                                              </children>
                                           </HBox>
+                                          <CheckBox fx:id="chbSshpass" disable="true" mnemonicParsing="false" text="Použít program sshpass" GridPane.rowIndex="1" />
                                        </children>
                                     </GridPane>
                                     <Separator prefWidth="200.0" />
@@ -338,7 +340,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
-            <TabPane fx:id="tpVystupy" prefHeight="200.0" prefWidth="200.0" side="BOTTOM" stylesheets="@css/tabpane2.css" tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
+            <TabPane fx:id="tpVystupy" prefHeight="652.0" prefWidth="487.0" side="BOTTOM" stylesheets="@css/tabpane2.css" tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
               <tabs>
                 <Tab text="Výstup">
                   <content>
